refactor: 重写 Java 核心+JVM 分类文章，提升质量
- java-jmm-volatile: CPU缓存/happens-before/内存屏障/DCL单例
- java-thread-pool: 7参数详解/队列类型/拒绝策略/生产模板
- reentrantlock-vs-synchronized: 锁升级/AQS/4大特性/BoundedBuffer
- jvm-gc-collectors: GC三角/Serial→ZGC演进/G1 Region/选型表
- jvm-tuning-heapdump: 症状表/JVM参数模板/GC日志/MAT分析
- java-completablefuture: Future局限/并行商品详情页/API对比
- java-spi: API vs SPI/三步实现/ServiceLoader原理/Dubbo SPI对比
- java-cpu-high: 5步SOP/GC风暴/死循环/死锁/Arthas命令
- java-stream-pitfalls: 8个高频坑/惰性求值/parallel陷阱
- java-deep-shallow-copy: 各拷贝方式/性能对比/MapStruct选型
- java-generics-erasure: 擦除规则/5类问题/TypeToken模式/PECS